--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Third-Party Fonts.css -->
     <link rel="stylesheet" href="https://use.typekit.net/wxx1acr.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
-    <title>Document</title>
+    <title>Weather. | A Web</title>
 </head>
 
 <body>
@@ -28,10 +28,10 @@
                     <div id="search" class="form-group">
                         <h2 class="card-title col-12">search for a city.</h2>
                         <div class="input-group input-group-lg">
-                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="Houston">
+                            <input id="get-city" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="Houston">
                         </div>
                     </div>
-                    <a href="#" class="btn btn-primary btn-lg col-12">Search</a>
+                    <a id="search-btn" class="btn btn-primary btn-lg col-12">Search</a>
                 </div>
             </div>
             <hr/>
@@ -50,7 +50,7 @@
                 <div id="display-bottom"></div>
                 <h3>five-day forecast:</h3>
                 <div class="five-day">
-                    <div id="week" class="col-2 day-one">3/22/2022</div>
+                    <div id="week" class="col-2 day-one"></div>
                     <div id="week" class="col-2 day-two"></div>
                     <div id="week" class="col-2 day-three"></div>
                     <div id="week" class="col-2 day-four"></div>
@@ -70,6 +70,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <!-- Self-Coded -->
-<script type="text/javascript" src="./assets/js/script.js"></script>
+<!-- <script type="text/javascript" src="./assets/js/script.js"></script> -->
+<!-- Debug Script -->
+<script type="text/javascript" src="./assets/js/test.js"></script>
 
 </html>
