--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <!-- Self-Coded -->
-<!-- <script type="text/javascript" src="./assets/js/script.js"></script> -->
+<script type="text/javascript" src="./assets/js/script.js"></script>
 <!-- Debug Script -->
-<script src="./assets/js/test.js"></script>
+<!-- <script src="./assets/js/test.js"></script> -->
 
 </html>
